--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,9 +1,9 @@
 <div class="artists">
     
     <div class="content">
-        <div class="header">
+        <div *ngIf="true" class="header">
             <div class="title-container">
-                <p> Acordesfacil </p>
+                <p> AcordesFacil </p>
             </div>
         </div>
 
