--- a/src/app/versions/versions.component.scss
+++ b/src/app/versions/versions.component.scss
@@ -1,31 +1,30 @@
-$goldenWheat: #a39274;
-$softWheat: #dfd8c8;
-$deepGray: #252523;
+@import "../../variables.scss";
 
 .versions {
-    font-size: 0.96rem;
     .versions-content {
-        margin: 0 5%;
+        margin: 0 1%;
 
         .badges-container {                                                                                                                                                                                                                                                                                                                                                                                     
             display: flex;
             padding: 10px 0;
-            margin: 1.2% 0 4.2%;
             overflow: auto;
         }
     
         .sheet-container {
-            color: $softWheat;
- 
             /deep/ pre {
 
                 white-space: pre-wrap;
                 word-wrap: break-word;
                 text-align: justify;
+                font-size: 0.94em;
+                padding-left: 1px;
+                border-left: 0.3rem solid #ddd0a0;
 
                 > a {
                     cursor: pointer;
-                    color: $goldenWheat;
+
+                    // color: $primary;
+                    color: #dfae5d;
                 }
             }
             
