--- a/src/app/artists-list/artists-list.component.scss
+++ b/src/app/artists-list/artists-list.component.scss
@@ -1,37 +1,37 @@
 .artists-list-container {
-    width: 100%;
     display: flex;
     flex-direction: column;
-    // padding: 4% 5%;
     padding: 2% 5% 4%;
+    margin-top: 2%;
 
-    .suggestion-list {
-        margin-top: 2%;
-        display: flex;
-        justify-content: center;
-    
-        .artists-lists {
-            margin: 0px;
-            list-style-type: none;
-            padding: 0;
-            width: 100%;
-            text-align: center;
-            font-size: 1.15rem;
-            
-            // color: #dfd8c8;
-        
-            > li {
-                cursor: pointer;
-                padding: 8px 0;
-                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-                margin-bottom: 2.3%;
-                font-size: 1.4rem;
-            }
-        
-            > li:nth-child(odd) {
-                // background-color: #a3927466;
-            }
+    .input-search {
+        width: 100%;
+    }
+
+    .artists-list {
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        width: 100%;
+
+        > mat-list-item {
+            background-color: #444444;
+        }
+
+        > mat-list-item:nth-child(odd) {
+            background-color: #3d3d3d;
         }
     }
 
+    .input-container {
+        display: flex;
+
+        .spinner-container {
+            margin: 10px 0% 0% 0%;
+            color: #32f5b7;
+            border-bottom: solid #32f5b7 1px;
+            height: 24px;
+            width: 20px;
+            text-align: center;
+            padding-top: 4px;
+        }
+    }
 }    
