--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -1,10 +1,16 @@
 <div class="artists">
     
     <div class="content">
-        <div *ngIf="true" class="header">
+        <!-- <div *ngIf="true" class="header">
             <div class="title-container">
                 <p> AcordesFacil </p>
             </div>
+        </div> -->
+
+        <div class="title-container">
+            <div class="a">A</div>
+            <div>cordes</div>
+            <div class="facil">Facil</div>
         </div>
 
         <router-outlet></router-outlet>
