--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,92 @@
-// @import "../themes/dark.css";
-@import "../src/variables.scss";
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-@import "../themes/miligram.min.css";
-
-html, body {
-    // height: 100%;
-
-    background-color: #fff;
-    color: $strong_rough;
+html, app-root, .app-frame, body {
+    overflow: auto;
+    margin: 0;
+    height: 100%;
+    box-sizing: border-box;
+    color: #e0e0e0;
+    overflow: hidden;
 }
+
+@import '~@angular/material/_theming.scss';
+@include mat-core();
+
+$bv-brand: (
+    50 : #edfdf5,
+    100 : #d2fbe7,
+    200 : #b4f8d7,
+    300 : #96f5c6,
+    400 : #80f2ba,
+    500 : #69f0ae,
+    600 : #61eea7,
+    700 : #56ec9d,
+    800 : #4ce994,
+    900 : #3be584,
+    A100 : #ffffff,
+    A200 : #fdfffe,
+    A400 : #caffe0,
+    A700 : #b1ffd1,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$md-accent: (
+    50 : #f8faf5,
+    100 : #ecf3e7,
+    200 : #e0ebd7,
+    300 : #d4e3c6,
+    400 : #caddba,
+    500 : #c1d7ae,
+    600 : #bbd3a7,
+    700 : #b3cd9d,
+    800 : #abc794,
+    900 : #9ebe84,
+    A100 : #ffffff,
+    A200 : #ffffff,
+    A400 : #f0ffe5,
+    A700 : #e2ffcb,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+$default-theme: mat-dark-theme(
+    mat-palette(
+        $bv-brand
+    ), 
+    mat-palette(
+        $md-accent
+    )
+);
+
+@include angular-material-theme($default-theme);
