--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,15 +1,3 @@
-// $secondary-color: #f3f5f6;
-// // $secondary-color: #141518;
-// $primary-color: #9b4dca;
-
-
-/////////////
-
-$primary: #eb6051;
-$secondary: #dfae5d;
-$back: #ddd0a0;
-
-$strong_light: #689988;
-$strong_rough: #00393a;
-
-//9b4dca
+// $primary: #3be584;
+$primary: #00c583;
+$secondary: #9ebe84;
