Terminado implementacion scrap

--- a/src/app/artists/artists.component.html
+++ b/src/app/artists/artists.component.html
@@ -3,11 +3,11 @@
     <div class="content">
 
         <!-- TODO: Comentado en CN, después descomento -->
-        <!-- <div class="title-container">
+        <div class="title-container">
             <div class="a">A</div>
             <div>cordes</div>
             <div class="facil">Facil</div>
-        </div> -->
+        </div>
 
         <router-outlet></router-outlet>
 
