--- a/src/app/versions/versions.component.scss
+++ b/src/app/versions/versions.component.scss
@@ -17,8 +17,9 @@
         .options-container {
             display: flex;
             justify-content: space-between;
-            margin: 0% 0 0.3%;
-
+            // margin: 0% 0 0.3%;
+            margin: 1% 0 3.3%;
+            
             .utils-container {
                 display: flex;
                 font-size: 1.3rem;
