--- a/src/app/versions/versions.component.scss
+++ b/src/app/versions/versions.component.scss
@@ -80,6 +80,7 @@
                 .versions-select-container {
                     display: flex;
                     justify-content: flex-end;
+                    margin-right: 7px;
                 }
 
                 .btn-fav-add, .divider {
@@ -99,6 +100,17 @@
             .version-item-select {
                 color: #00d484;
                 border: solid #00d484 2px;
+            }
+
+            .right-item {
+                color: #e0e0e0;
+                font-weight: bold;
+                margin: 9px 3px 0px;
+                padding: 1px 7px 0px 6px;
+                margin-top: 10px;            
+                font-size: 1.1rem;
+                margin-top: 9.7px !important;
+                
             }
 
 
